sync with 1.21.5-0.24.0-sakura.6